Bug 359983 - KRunner history items can't be deleted from UI
Summary: KRunner history items can't be deleted from UI
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.5.4
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Vishesh Handa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-02 04:34 UTC by Sudhir Khanger
Modified: 2016-03-07 12:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sudhir Khanger 2016-03-02 04:34:35 UTC
KRunner history items list has no delete button to remove individual items.

Reproducible: Always
Comment 1 Kai Uwe Broulik 2016-03-02 13:33:44 UTC
I planned on making delete buttons on every item but forgot to finish the patch. You can clear the entire history in KRunner's settings.
Comment 2 Kai Uwe Broulik 2016-03-07 12:57:44 UTC
Git commit 87cc9e5ac0d2cc17f9dd73033229d163cb3630e8 by Kai Uwe Broulik.
Committed on 07/03/2016 at 12:57.
Pushed by broulik into branch 'master'.

[KRunner] Allow deleting individual entries from the history

This adds a "remove" button to each one of them
FIXED-IN: 5.7.0

M  +17   -1    krunner/view.cpp
M  +4    -0    krunner/view.h
M  +17   -1    lookandfeel/contents/runcommand/RunCommand.qml

http://commits.kde.org/plasma-workspace/87cc9e5ac0d2cc17f9dd73033229d163cb3630e8