[KRunner] Allow deleting individual entries from the history

This adds a "remove" button to each one of them

BUG: 359983
FIXED-IN: 5.7.0